# overlayfriend

./: .gitmodules  MMDRenderer.cpp  SETUP.md  build.gradle  gradlew  settings.gradle
.github/workflows/: build.yml
app/: build.gradle  proguard-rules.pro
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
app/src/main/cpp/motion/: VMDManager.cpp  VMDManager.h
app/src/main/cpp/renderer/: MMDRenderer.cpp  MMDRenderer.h  ShaderProgram.cpp  ShaderProgram.h
app/src/main/cpp/saba/: CMakeLists.txt
app/src/main/java/com/endfield/overlayassistant/: AffinityManager.java  AiAssistantImpl.java  IAiAssistant.java  IntegrityGuard.java  MainActivity.java  NativeRenderer.java  OverlayService.java  OverlayView.java
app/src/main/java/com/endfield/overlayassistant/settings/: SettingsActivity.java
app/src/main/res/drawable/: btn_neon_primary.xml  btn_neon_secondary.xml  card_neon.xml  char_field_neon.xml  ic_launcher_foreground.xml
app/src/main/res/layout/: activity_main.xml  activity_settings.xml
app/src/main/res/values/: colors.xml  phrases.xml  strings.xml  themes.xml
